# xrturb

./: .gitignore  README.md  main.py  pyproject.toml
docs/: api.rst  conf.py  examples.rst  index.rst  installation.rst  usage.rst
src/xrturb/: __init__.py  filtering.py  quadrant_analysis.py  spatial.py  statistics.py  utils.py
tests/: __init__.py  conftest.py  test_accessor.py  test_filtering.py  test_spatial.py  test_statistics.py  test_utils.py
