[project]
name = "xrturb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.3",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "xarray>=2025.12.0",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
xrturb = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "xrturb",
    "pytest",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
